192: git-pr: use jbs entry in .jcheck/conf for finding issues
Reviewed-by: rwestberg